# automated-acupuncture-learner

./: main_gui.py  pyproject.toml  readme.md  start.sh
data/: real_data.csv
